--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.90.1",
     "@tanstack/react-query": "^5.90.18",
+    "autoprefixer": "^10.4.23",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.562.0",
+    "postcss": "^8.5.6",
     "prop-types": "^15.8.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.12.0"
+    "react-router-dom": "^7.12.0",
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@tailwindcss/vite": "^4.1.18",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
