--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "^10.4.23",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.562.0",
+    "node-fetch": "^3.3.2",
     "postcss": "^8.5.6",
     "prop-types": "^15.8.1",
     "react": "^19.2.0",
